fix(REM-P2-020): align historical workflow stat detail